selfhost/test/typechecker/invocation/error_expr_not_callable.out
Error at %FILE_NAME%:3:1
Cannot invoke target as function
  |  a()
     ^
Type 'Int' is not callable
