selfhost/test/typechecker/invocation/error_expr_not_callable.abra
val a = 123

a()
